<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_comment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:orientation="vertical"
    tools:context=".ui.CommentActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/comment"
        android:textColor="#FFFFFF"
        android:textSize="13sp" />

    <LinearLayout
        android:id="@+id/ll_ctrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="7dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_hot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:text="@string/hotComment"
            android:textColor="#999999" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="65dp"
            android:layout_height="25dp"
            android:background="@drawable/btn_blue"
            android:onClick="message"
            android:text="@string/sendComment"
            android:textColor="#FFFFFF"
            android:textSize="10sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_comments"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="3dp"
        android:divider="#FAFAFA"
        android:dividerHeight="1dp"
        android:visibility="visible">

    </ListView>

    <LinearLayout
        android:id="@+id/ll_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/pb_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="63dp" />

        <TextView
            android:id="@+id/tv_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/loading"
            android:textColor="#2a2b2c"
            android:textSize="15sp" />

    </LinearLayout>
</LinearLayout>