<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ReplyActivity">


    <RelativeLayout
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_extraicon"
            android:layout_width="12dp"
            android:layout_height="19dp"
            android:layout_marginStart="2dp"
            android:layout_toStartOf="@id/tv_title"
            android:contentDescription="@string/todo"
            android:rotation="-270"
            android:src="@drawable/icon_extra" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/sendComment"
            android:textColor="#FAFAFA"
            tools:ignore="RelativeOverlap,TextContrastCheck" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/et_blue"
                android:minHeight="80dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="8dp"
                    android:background="?attr/colorOnPrimary"
                    android:ems="10"
                    android:gravity="start"
                    android:hint="@string/tip_input"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColor="?attr/colorOnSecondary"
                    android:textColorHint="#999999"
                    android:textSize="12sp"
                    tools:ignore="TextFields,TouchTargetSizeCheck,TextContrastCheck" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/send"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>