<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_lyrics"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.LyricsFragment">

    <LinearLayout
        android:id="@+id/ll_ctrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_console"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_console"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_baseline_menu_24" />

            <TextView
                android:id="@+id/tv_console"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:text="@string/console"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_share"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_baseline_share_24" />

            <TextView
                android:id="@+id/tv_share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:text="@string/shareLyrics"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

    </LinearLayout>

    <cn.wearbbs.music.view.LrcView
        android:id="@+id/lv_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:lrcAnimationDuration="1000"
        app:lrcCurrentTextColor="?attr/colorPrimaryVariant"
        app:lrcDividerHeight="20dp"
        app:lrcLabel="加载中"
        app:lrcNormalTextColor="#999999"
        app:lrcNormalTextSize="12dp"
        app:lrcPadding="16dp"
        app:lrcTextGravity="center"
        app:lrcTextSize="12dp"
        app:lrcTimeTextColor="#999999"
        app:lrcTimeTextSize="12dp"
        app:lrcTimelineColor="#999999"
        app:lrcTimelineTextColor="?attr/colorPrimaryVariant" />

</LinearLayout>