<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:orientation="vertical"
    tools:context=".ui.FeedbackActivity">

    <LinearLayout
        android:id="@+id/ll_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/main_title_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:gravity="center_vertical"
            android:onClick="onClick"
            android:padding="8dp">

            <ImageView
                android:id="@+id/iv_extraicon_loading"
                android:layout_width="12dp"
                android:layout_height="19dp"
                android:layout_marginStart="2dp"
                android:layout_toStartOf="@id/tv_title_loading"
                android:contentDescription="@string/todo"
                android:rotation="-270"
                android:src="@drawable/icon_extra" />

            <TextView
                android:id="@+id/tv_title_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/feedback"
                android:textColor="#FAFAFA"
                tools:ignore="RelativeOverlap,TextContrastCheck" />

        </RelativeLayout>

        <cn.wearbbs.music.view.LoadingView
            android:id="@+id/lv_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/main_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:gravity="center_vertical"
            android:onClick="onClick"
            android:padding="8dp">

            <ImageView
                android:id="@+id/iv_extraicon"
                android:layout_width="12dp"
                android:layout_height="19dp"
                android:layout_marginStart="2dp"
                android:layout_toStartOf="@id/tv_title"
                android:contentDescription="@string/todo"
                android:rotation="-270"
                android:src="@drawable/icon_extra" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/feedback"
                android:textColor="#FAFAFA"
                tools:ignore="RelativeOverlap,TextContrastCheck" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:id="@+id/ll_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tv_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/tip_latest"
                    android:textSize="12sp"
                    android:visibility="visible"
                    app:drawableLeftCompat="@drawable/ic_baseline_check_24" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/et_blue"
                    android:minHeight="80dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="8dp"
                        android:background="?attr/colorOnPrimary"
                        android:ems="10"
                        android:gravity="start"
                        android:hint="@string/tip_input"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textColor="?attr/colorOnSecondary"
                        android:textColorHint="#999999"
                        android:textSize="12sp"
                        tools:ignore="TextFields,TouchTargetSizeCheck,TextContrastCheck" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="#2175F3"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:text="@string/submit"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</LinearLayout>